# NovelExtractor

./: .env.example  .gitignore  AGENTS.md  QUICKSTART.md  README.md  SUMMARY.md  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  vitest.workspace.ts
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
apps/desktop/: electron-builder.yml  electron.vite.config.ts  index.html  package.json  tsconfig.json
apps/desktop/scripts/: build-dist.js
config/: novel_extractor.mvp.yaml
docs/: deepseek-integration-fix.md  job-6日志综合问题审查-2026-07-14.md  tool-migration-summary.md  实施进度报告.md  待修改问题记录.md  提取流程大白话梳理.md  最终交付总结.md  缓存优化说明.md  项目完成报告.md  项目实施建议报告.md
docs/superpowers/plans/: 2026-06-24-novel-extractor-mvp.md  (+18 more)
e2e/: desktop-p0.spec.ts  desktop-real-run.spec.ts  globalSetup.ts
e2e/fixtures/: gbk-novel.txt  mock-openai-compatible.ts  utf8-novel.txt
e2e/screenshots/: .gitkeep
src/novel_extractor/: chapters.py  cli.py  config.py  doc_index.py  ledger.py  llm.py  pipeline.py  progress.py  prompts.py  run_log.py  templates.py  token_saving.py  verifier.py  writer.py
tests/: test_cache_guard.py  test_cache_shape.py  test_chapters.py  test_cli.py  test_config.py  test_doc_index.py  test_doc_index_snippets.py  test_ledger.py  test_llm_fake.py  test_pipeline_reasonix_flow.py  test_progress.py  test_prompt_budgeter.py  test_prompts.py  test_reasonix_tools.py  test_reasonix_usage.py  test_run_log.py  test_templates.py  test_token_saving_config.py  test_tool_budget.py  test_two_model_isolation.py  test_writer.py
(+126 files in other folders)
