[project]
name = "novel-extractor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.1",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
novel-extractor = "novel_extractor.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
